Footer, Main Modified

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
 
 
         <div>
-            <h3 class="text-decoration-underline text-center fw-bold mb-5">Productos más buscados</h3>
+            <h3 class="text-decoration-underline text-center fw-bold mt-5 mb-3">Productos más buscados</h3>
         </div>
-        <section class="grid-container">
+        <section class="flex-container mb-5">
 
-            <div class="image grid-item">
-                <img src="images/yerba/canarias1kg.png" alt="Yerba Canarias de 1 kilogramo.">
+            <div class="image text-center bg-success">
+                <p class="title fw-bold">Yerba Canarias 1kg</p>
+
+                <img src="images/yerba/canarias1kg.png" alt="Yerba Canarias de 1 kilogramo." class="mb-2 mt-3">
 
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore laudantium nesciunt
@@ -77,8 +79,10 @@
                 </p>
             </div>
 
-            <div class="image grid-item">
-                <img src="images/mates/imperialalpaca.png" alt="Mate Imperial con Virola de Alpaca">
+            <div class="image text-center bg-success">
+                <p class="title fw-bold">Mate Algarrobo Virola de Alpaca</p>
+
+                <img src="images/mates/imperialalpaca.png" alt="Mate Imperial con Virola de Alpaca" class="mb-2 mt-3">
 
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem incidunt, odio
@@ -91,18 +95,23 @@
 
 
 
-    <footer id="contacto">
+    <footer id="contacto" class="bg-success">
 
-        <div class="contacto">
+        <div class="text-center fw-bold">
             <p>Contacto</p>
         </div>
 
-        <div>
-            <a href="https://www.instagram.com/tomamos._un_mate">
-                <img src="images/logos/iglogo.png" alt="Logo Instagram">
+
+
+        <div class="text-center contact-logo">
+            <a href="https://www.instagram.com/tomamos._un_mate" class="text-decoration-none">
+                <img src="images/logos/iglogo.png" alt="Logo Instagram" class="image-footer">
+
+                <p>@tomamos._un_mate</p>
             </a>
-            <p>@tomamos._un_mate</p>
         </div>
+
+
 
         <div>
             <p>®Todos los derechos reservados.</p>
