--- a/pages/termos.html
+++ b/pages/termos.html
@@ -4,54 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Termos - Tomamos Un Mate?</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');</style>
+    <link rel="stylesheet" href="../css/style2.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <img src="../images/logos/logosinfondo.png" alt="Logo">
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">
-                        -Página Principal-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="yerbas.html">
-                        -Yerbas-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="mates.html">
-                        -Mates-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="termos.html">
-                        -Termos-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="alfajores.html">
-                        -Alfajores-
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#contacto">
-                        -Contacto-
-                    </a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary gray-bg">
+            <div class="container-fluid bg-success">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="../images/logos/logosinfondo.png" alt="Logo" class="img-fluid logo">
+                </a>
+                <!-- Dropdown button for mobile -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <!-- Home -->
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <!-- Dropdown button -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="yerbas.html">Yerbas</a></li>
+                                <li><a class="dropdown-item" href="mates.html">Mates</a></li>
+                                <li><a class="dropdown-item" href="termos.html">Termos</a></li>
+                                <li><a class="dropdown-item" href="alfajores.html">Alfajores</a></li>
+                            </ul>
+                        </li>
+                        <!-- Contact -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contacto">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -72,28 +71,37 @@
         </div>
     </section>
 
-    <footer id="contacto">
+    <footer id="contacto" class="bg-success">
 
-        <div class="contacto">
+        <div class="text-center fw-bold">
             <p>Contacto</p>
         </div>
 
-        <div>
-            <a href="https://www.instagram.com/tomamos._un_mate">
-                <img src="../images/logos/iglogo.png" alt="Logo Instagram">
+
+
+        <div class="text-center contact-logo">
+            <a href="https://www.instagram.com/tomamos._un_mate" class="text-decoration-none">
+                <img src="../images/logos/iglogo.png" alt="Logo Instagram" class="image-footer">
+
+                <p>@tomamos._un_mate</p>
             </a>
-            <p>@tomamos._un_mate</p>
         </div>
+
+
 
         <div>
             <p>®Todos los derechos reservados.</p>
         </div>
+
+        <div>
+            <p>*Página desarrollada por motivo de entrega curso Desarrollo Web CoderHouse.</p>
+        </div>
     </footer>
 
-    <div>
-        <p>*Página desarrollada por motivo de entrega curso Desarrollo Web CoderHouse.</p>
-    </div>
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
