--- a/pages/yerbas.html
+++ b/pages/yerbas.html
@@ -54,34 +54,42 @@
         </nav>
     </header>
 
-    <section>
+    <main>
+
         <div>
-            <h3>Lista de yerbas</h3>
-        </div>
-        <div class="image">
-            <p class="title" style="color: #E8D300;">Canarias 1kg</p>
-            <img src="../images/yerba/canarias1kg.png" alt="Yerba mate marca Canarias de 1 kilogramo.">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero nam ullam vitae tempore? Velit iusto
-                consequuntur ea in! Dignissimos commodi debitis dolorem ratione vitae saepe quo, aperiam accusamus
-                velnisi.</p>
+            <h3 class="text-decoration-underline text-center fw-bold mb-3">Lista de yerbas</h3>
         </div>
 
-        <div class="image">
-            <p class="title" style="color: #aab86d;">Baldo 1kg</p>
-            <img src="../images/yerba/baldo1kg.png" alt="Yerba Mate marca Baldo de 1 kilogramo.">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsam cumque perspiciatis
-                excepturiconsectetur minus, perferendis saepe quo distinctio quae voluptatum, facilis, repellendus dicta
-                quaeratodit est sequi veritatis harum!</p>
-        </div>
+        <section class="flex-container mb-5">
 
-        <div class="image">
-            <p class="title" style="color: #000000;">Rei Verde Premiun 1kg</p>
-            <img src="../images/yerba/reiverdepremiun1kg.png" alt="Yerba Mate marca Rei Verde Premiun de 1 kilogramo.">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem aut iure, ullam provident
-                magnammolestias, nihil natus deleniti libero a deserunt distinctio exercitationem nam ad quaerat
-                tempora.Temporibus, vel esse?</p>
-        </div>
-    </section>
+            <div class="image text-center bg-success">
+                <p class="title fw-bold img-fluid" style="color: #E8D300;">Canarias 1kg</p>
+                <img src="../images/yerba/canarias1kg.png" alt="Yerba mate marca Canarias de 1 kilogramo.">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero nam ullam vitae tempore? Velit iusto
+                    consequuntur ea in! Dignissimos commodi debitis dolorem ratione vitae saepe quo, aperiam accusamus
+                    velnisi.</p>
+            </div>
+
+            <div class="image text-center bg-success">
+                <p class="title fw-bold img-fluid" style="color: #aab86d;">Baldo 1kg</p>
+                <img src="../images/yerba/baldo1kg.png" alt="Yerba Mate marca Baldo de 1 kilogramo.">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsam cumque perspiciatis
+                    excepturiconsectetur minus, perferendis saepe quo distinctio quae voluptatum, facilis, repellendus
+                    dicta
+                    quaeratodit est sequi veritatis harum!</p>
+            </div>
+
+            <div class="image text-center bg-success">
+                <p class="title fw-bold img-fluid" style="color: #000000;">Rei Verde Premiun 1kg</p>
+                <img src="../images/yerba/reiverdepremiun1kg.png"
+                    alt="Yerba Mate marca Rei Verde Premiun de 1 kilogramo.">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem aut iure, ullam provident
+                    magnammolestias, nihil natus deleniti libero a deserunt distinctio exercitationem nam ad quaerat
+                    tempora.Temporibus, vel esse?</p>
+            </div>
+        </section>
+
+    </main>
 
     <footer id="contacto" class="bg-success">
 
@@ -110,10 +118,12 @@
         </div>
     </footer>
 
-    
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
