--- a/pages/yerbas.html
+++ b/pages/yerbas.html
@@ -63,7 +63,7 @@
         <section class="flex-container mb-5">
 
             <div class="image text-center bg-success">
-                <p class="title fw-bold img-fluid" style="color: #E8D300;">Canarias 1kg</p>
+                <p class="title fw-bold" style="color: #E8D300;">Canarias 1kg</p>
                 <img src="../images/yerba/canarias1kg.png" alt="Yerba mate marca Canarias de 1 kilogramo.">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero nam ullam vitae tempore? Velit iusto
                     consequuntur ea in! Dignissimos commodi debitis dolorem ratione vitae saepe quo, aperiam accusamus
@@ -71,7 +71,7 @@
             </div>
 
             <div class="image text-center bg-success">
-                <p class="title fw-bold img-fluid" style="color: #aab86d;">Baldo 1kg</p>
+                <p class="title fw-bold" style="color: #aab86d;">Baldo 1kg</p>
                 <img src="../images/yerba/baldo1kg.png" alt="Yerba Mate marca Baldo de 1 kilogramo.">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsam cumque perspiciatis
                     excepturiconsectetur minus, perferendis saepe quo distinctio quae voluptatum, facilis, repellendus
