--- a/pages/termos.html
+++ b/pages/termos.html
@@ -54,29 +54,33 @@
         </nav>
     </header>
 
-    <section>
+
+    <main>
         <div>
-            <h3>Lista de termos</h3>
+            <h3 class="text-decoration-underline text-center fw-bold mb-3">Lista de termos</h3>
         </div>
-        <div class="image">
-            <p class="title" style="color: #000;">Termo Stanley<br>Mate System 1L</p>
+        
+    <section class="flex-container mb-5">
+        
+        <div class="image text-center bg-success">
+            <p class="title fw-bold" style="color: #000;">Termo Stanley<br>Mate System 1L</p>
             <img src="../images/termos/stanleymatesystem.png" alt="Termo de mate marca Stanley con sistema Mate System de 1 litro.">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus voluptates ipsa corporis molestias unde, commodi sequi quibusdam ad nisi, corrupti fugiat laborum error veritatis, maiores numquam dolore quisquam? Est.</p>
         </div>
 
-        <div class="image">
-            <p class="title" style="color: #000;">Termo Termolar<br>R-Evolution 1L</p>
-            <img src="../images/termos/termolarevolution1l.png" alt="Termo de mate marca Termolar Revolution de 1 litro.">
+        <div class="image text-center bg-success">
+            <p class="title fw-bold" style="color: #000;">Termo Termolar<br>R-Evolution 1L</p>
+            <img src="../images/termos/termolarevolution1l.png" alt="Termo de mate marca Termolar Revolution de 1 litro." class="img-fluid">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ipsa ratione iste maxime blanditiis numquam magnam voluptatem pariatur eveniet omnis facilis? Sint ipsa veniam iste id eos magni voluptas numquam!</p>
         </div>
     </section>
+    </main>
 
     <footer id="contacto" class="bg-success">
 
         <div class="text-center fw-bold">
             <p>Contacto</p>
         </div>
-
 
 
         <div class="text-center contact-logo">
