--- a/pages/mates.html
+++ b/pages/mates.html
@@ -54,26 +54,30 @@
         </nav>
     </header>
 
-    <section>
-        <div>
+    <main>
+
+        <div class="text-decoration-underline text-center fw-bold mb-3">
             <h3>Lista de mates</h3>
         </div>
-        <div class="image">
-            <p class="title" style="color: #B47E47;">Mate de Algarrobo<br>Virola de Alpaca</p>
+
+    <section class="flex-container mb-5">
+        <div class="image text-center bg-success">
+            <p class="title fw-bold" style="color: #B47E47;">Mate de Algarrobo<br>Virola de Alpaca</p>
             <img src="../images/mates/algarroboalpaca.png" alt="Mate de algarrobo con Virola de Alpaca">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates ipsam earum sequi sunt ea assumenda?
                 Dolore, similique deserunt unde ipsam sit consequuntur alias ullam aliquid sed ducimus, minus
                 consequatur dignissimos.</p>
         </div>
 
-        <div class="image">
-            <p class="title" style="color: #2C0A02;">Mate Calabaza Imperial<br>Virola de Alpaca</p>
+        <div class="image text-center bg-success">
+            <p class="title fw-bold" style="color: #2C0A02;">Mate Calabaza Imperial<br>Virola de Alpaca</p>
             <img src="../images/mates/imperialalpaca.png" alt="Mate de calabaza Imperial con Virola de Alpaca">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum aliquid quasi impedit recusandae
                 laudantium sunt quaerat dolor odio quas blanditiis maiores, sapiente omnis, suscipit aspernatur id
                 itaque corrupti, mollitia numquam!</p>
         </div>
     </section>
+    </main>
 
     <footer id="contacto" class="bg-success">
 
