--- a/pages/termos.html
+++ b/pages/termos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Termos - Tomamos Un Mate?</title>
     <link rel="stylesheet" href="../css/style2.css">
 </head>
@@ -59,21 +59,27 @@
         <div>
             <h3 class="text-decoration-underline text-center fw-bold mb-3">Lista de termos</h3>
         </div>
-        
-    <section class="flex-container mb-5">
-        
-        <div class="image text-center bg-success">
-            <p class="title fw-bold" style="color: #000;">Termo Stanley<br>Mate System 1L</p>
-            <img src="../images/termos/stanleymatesystem.png" alt="Termo de mate marca Stanley con sistema Mate System de 1 litro.">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus voluptates ipsa corporis molestias unde, commodi sequi quibusdam ad nisi, corrupti fugiat laborum error veritatis, maiores numquam dolore quisquam? Est.</p>
-        </div>
 
-        <div class="image text-center bg-success">
-            <p class="title fw-bold" style="color: #000;">Termo Termolar<br>R-Evolution 1L</p>
-            <img src="../images/termos/termolarevolution1l.png" alt="Termo de mate marca Termolar Revolution de 1 litro." class="img-fluid">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ipsa ratione iste maxime blanditiis numquam magnam voluptatem pariatur eveniet omnis facilis? Sint ipsa veniam iste id eos magni voluptas numquam!</p>
-        </div>
-    </section>
+        <section class="flex-container mb-5">
+
+            <div class="image text-center bg-success">
+                <p class="title fw-bold" style="color: #000;">Termo Stanley<br>Mate System 1L</p>
+                <img src="../images/termos/stanleymatesystem.png"
+                    alt="Termo de mate marca Stanley con sistema Mate System de 1 litro.">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus voluptates ipsa
+                    corporis molestias unde, commodi sequi quibusdam ad nisi, corrupti fugiat laborum error veritatis,
+                    maiores numquam dolore quisquam? Est.</p>
+            </div>
+
+            <div class="image text-center bg-success">
+                <p class="title fw-bold" style="color: #000;">Termo Termolar<br>R-Evolution 1L</p>
+                <img src="../images/termos/termolarevolution1l.png"
+                    alt="Termo de mate marca Termolar Revolution de 1 litro.">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ipsa ratione iste maxime blanditiis
+                    numquam magnam voluptatem pariatur eveniet omnis facilis? Sint ipsa veniam iste id eos magni
+                    voluptas numquam!</p>
+            </div>
+        </section>
     </main>
 
     <footer id="contacto" class="bg-success">
@@ -105,7 +111,9 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
