--- a/pages/alfajores.html
+++ b/pages/alfajores.html
@@ -54,27 +54,31 @@
         </nav>
     </header>
 
-    <section>
-        <div>
-            <h3>Lista de alfajores</h3>
-        </div>
+    <main>
 
-        <div class="image">
-            <p class="title" style="color: #000;">Alfajor Rasta Negro</p>
+        <div>
+            <h3 class="text-decoration-underline text-center fw-bold mb-3">Lista de alfajores</h3>
+        </div>
+    <section class="flex-container mb-5">
+
+        <div class="image text-center bg-success">
+            <p class="title fw-bold" style="color: #000;">Alfajor Rasta Negro</p>
             <img src="../images/alfajores/rastanegro.png" alt="Alfajor marca Rasta de color negro.">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur eius molestiae corporis ad quasi
                 assumenda soluta. Ullam rerum quo quibusdam fugit necessitatibus explicabo voluptates, at dicta quasi,
                 magni, pariatur quaerat.</p>
         </div>
 
-        <div class="image">
-            <p class="title" style="color: #f0f0f0;">Alfajor Rasta Blanco</p>
+        <div class="image text-center bg-success">
+            <p class="title fw-bold" style="color: #f0f0f0;">Alfajor Rasta Blanco</p>
             <img src="../images/alfajores/rastablanco.png" alt="Alfajor marca Rasta de color blanco.">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet nihil natus cumque modi vitae ab.
                 Numquam amet qui itaque. Tempore veritatis pariatur molestias sunt, eaque incidunt rerum nihil est
                 aperiam!</p>
         </div>
     </section>
+
+    </main>
 
     <footer id="contacto" class="bg-success">
 
