--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <main>
         <h1 class="text-center title mb-3 mt-3">
-            Bienvenidos a la tienda Online de <span class="fw-bold bg-success green-font "><br>¿Tomamos Un Mate?</span>
+            Bienvenidos a la tienda Online de <span class="fw-bold bg-success"><br>¿Tomamos Un Mate?</span>
         </h1>
         <h2 class="text-center">
             Puedes consultar todas nuestras variedades en el menú de navegación <span class="fw-bold">arriba</span>
@@ -66,7 +66,7 @@
         </div>
         <section class="flex-container mb-5">
 
-            <div class="image text-center bg-success">
+            <div class="text-center bg-success">
                 <p class="title fw-bold">Yerba Canarias 1kg</p>
 
                 <img src="images/yerba/canarias1kg.png" alt="Yerba Canarias de 1 kilogramo." class="mb-2 mt-3">
@@ -104,7 +104,7 @@
 
         <div class="text-center contact-logo">
             <a href="https://www.instagram.com/tomamos._un_mate" class="text-decoration-none">
-                <img src="images/logos/iglogo.png" alt="Logo Instagram" class="image-footer">
+                <img src="images/logos/iglogo.png" alt="Logo Instagram">
 
                 <p>@tomamos._un_mate</p>
             </a>
