--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                 <img src="images/yerba/canarias1kg.png" alt="Yerba Canarias de 1 kilogramo." class="mb-2 mt-3">
 
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore laudantium nesciunt
-                    doloremque,voluptatibus distinctio quae voluptatum placeat provident? Laudantium unde possimus optio
-                    quae! Sintmolestias inventore placeat, aperiam saepe odit?
+                    Yerba Canarias es una <span class="fw-bold">yerba mate uruguaya</span> reconocida por su molienda fina y sabor intenso. Elaborada con hojas seleccionadas y sin palos, ofrece una experiencia auténtica y de calidad para los amantes del mate.
                 </p>
             </div>
 
@@ -84,9 +82,7 @@
                 <img src="images/mates/imperialalpaca.png" alt="Mate Imperial con Virola de Alpaca" class="mb-2 mt-3">
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem incidunt, odio
-                    voluptatibusexpedita quod ex debitis repudiandae commodi numquam recusandae qui, dolores enim fugiat
-                    quis vero omnisaperiam consequuntur.
+                    Este mate destaca por su diseño elegante y su virola de alpaca, que le da un toque distintivo y duradero. Ideal para quienes buscan combinar tradición y estilo en cada mateada.
                 </p>
             </div>
         </section>
