--- a/pages/alfajores.html
+++ b/pages/alfajores.html
@@ -63,17 +63,13 @@
         <div class="image text-center bg-success">
             <p class="title fw-bold" style="color: #000;">Alfajor Rasta Negro</p>
             <img src="../images/alfajores/rastanegro.png" alt="Alfajor marca Rasta de color negro.">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur eius molestiae corporis ad quasi
-                assumenda soluta. Ullam rerum quo quibusdam fugit necessitatibus explicabo voluptates, at dicta quasi,
-                magni, pariatur quaerat.</p>
+            <p>Disfrutá la combinación perfecta de chocolate y sabor con el Alfajor Rasta Negro. Con su relleno irresistible y su cobertura de chocolate, es ideal para acompañar con un mate en cualquier momento del día.</p>
         </div>
 
         <div class="image text-center bg-success">
             <p class="title fw-bold" style="color: #f0f0f0;">Alfajor Rasta Blanco</p>
             <img src="../images/alfajores/rastablanco.png" alt="Alfajor marca Rasta de color blanco.">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet nihil natus cumque modi vitae ab.
-                Numquam amet qui itaque. Tempore veritatis pariatur molestias sunt, eaque incidunt rerum nihil est
-                aperiam!</p>
+            <p>El Alfajor Rasta Blanco es una opción deliciosa para quienes disfrutan de sabores suaves y cremosos. Con su exquisita cobertura de chocolate blanco y un relleno especial, es una verdadera tentación para cualquier ocasión.</p>
         </div>
     </section>
 
