--- a/pages/mates.html
+++ b/pages/mates.html
@@ -63,17 +63,13 @@
         <div class="image text-center bg-success">
             <p class="title fw-bold" style="color: #B47E47;">Mate de Algarrobo<br>Virola de Alpaca</p>
             <img src="../images/mates/algarroboalpaca.png" alt="Mate de algarrobo con Virola de Alpaca">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates ipsam earum sequi sunt ea assumenda?
-                Dolore, similique deserunt unde ipsam sit consequuntur alias ullam aliquid sed ducimus, minus
-                consequatur dignissimos.</p>
+            <p>Este mate de algarrobo con virola de alpaca combina elegancia y funcionalidad. Su diseño artesanal es ideal para disfrutar el mate con estilo, combinando la calidez de la madera con el brillo de la alpaca.</p>
         </div>
 
         <div class="image text-center bg-success">
             <p class="title fw-bold" style="color: #2C0A02;">Mate Calabaza Imperial<br>Virola de Alpaca</p>
             <img src="../images/mates/imperialalpaca.png" alt="Mate de calabaza Imperial con Virola de Alpaca">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum aliquid quasi impedit recusandae
-                laudantium sunt quaerat dolor odio quas blanditiis maiores, sapiente omnis, suscipit aspernatur id
-                itaque corrupti, mollitia numquam!</p>
+            <p>Este sofisticado mate con un unterior de calabaza cuenta con virola de alpaca decorada, que le aporta un diseño único y refinado. Perfecto para quienes buscan un equilibrio entre tradición, funcionalidad y estilo en cada mateada.</p>
         </div>
     </section>
     </main>
