--- a/pages/termos.html
+++ b/pages/termos.html
@@ -65,18 +65,14 @@
                 <p class="title fw-bold" style="color: #000;">Termo Stanley<br>Mate System 1L</p>
                 <img src="../images/termos/stanleymatesystem.png"
                     alt="Termo de mate marca Stanley con sistema Mate System de 1 litro.">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus voluptates ipsa
-                    corporis molestias unde, commodi sequi quibusdam ad nisi, corrupti fugiat laborum error veritatis,
-                    maiores numquam dolore quisquam? Est.</p>
+                <p>El Termo Stanley Mate System de 1 litro es una opción confiable para mantener tu bebida caliente o fría por horas. Con su diseño práctico y duradero, es ideal para el uso diario y aventuras al aire libre.</p>
             </div>
 
             <div class="image text-center bg-success">
                 <p class="title fw-bold" style="color: #000;">Termo Termolar<br>R-Evolution 1L</p>
                 <img src="../images/termos/termolarevolution1l.png"
                     alt="Termo de mate marca Termolar Revolution de 1 litro.">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ipsa ratione iste maxime blanditiis
-                    numquam magnam voluptatem pariatur eveniet omnis facilis? Sint ipsa veniam iste id eos magni
-                    voluptas numquam!</p>
+                <p>El Termo Termolar R-Evolution de 1 litro combina diseño moderno, funcionalidad y tecnología térmica avanzada. Perfecto para mantener tus líquidos en la temperatura ideal durante todo el día, con un diseño ergonómico y práctico para el uso diario.</p>
             </div>
         </section>
     </main>
