--- a/pages/yerbas.html
+++ b/pages/yerbas.html
@@ -64,27 +64,20 @@
             <div class="image text-center bg-success">
                 <p class="title fw-bold" style="color: #E8D300;">Canarias 1kg</p>
                 <img src="../images/yerba/canarias1kg.png" alt="Yerba mate marca Canarias de 1 kilogramo.">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero nam ullam vitae tempore? Velit iusto
-                    consequuntur ea in! Dignissimos commodi debitis dolorem ratione vitae saepe quo, aperiam accusamus
-                    velnisi.</p>
+                <p>Una <span class="fw-bold">yerba mate uruguaya</span> con molienda fina y sabor intenso, ideal para quienes buscan una experiencia auténtica y suave en cada mateada.</p>
             </div>
 
             <div class="image text-center bg-success">
                 <p class="title fw-bold" style="color: #aab86d;">Baldo 1kg</p>
                 <img src="../images/yerba/baldo1kg.png" alt="Yerba Mate marca Baldo de 1 kilogramo.">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsam cumque perspiciatis
-                    excepturiconsectetur minus, perferendis saepe quo distinctio quae voluptatum, facilis, repellendus
-                    dicta
-                    quaeratodit est sequi veritatis harum!</p>
+                <p>Con un sabor equilibrado, es una opción clásica y versátil para disfrutar del mate tradicional, combinando calidad y tradición.</p>
             </div>
 
             <div class="image text-center bg-success">
                 <p class="title fw-bold img-fluid" style="color: #000000;">Rei Verde Premiun 1kg</p>
                 <img src="../images/yerba/reiverdepremiun1kg.png"
                     alt="Yerba Mate marca Rei Verde Premiun de 1 kilogramo.">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem aut iure, ullam provident
-                    magnammolestias, nihil natus deleniti libero a deserunt distinctio exercitationem nam ad quaerat
-                    tempora.Temporibus, vel esse?</p>
+                <p>Con hojas seleccionadas y un sabor suave, es perfecta para quienes prefieren una experiencia delicada y placentera en cada mate.</p>
             </div>
         </section>
 
