--- a/pages/mates.html
+++ b/pages/mates.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sección de mates donde encontrarás variedad de mates de virola de Alpaca de la tienda oficial de Tomamos Un Mate"">
+    <meta name="keywords" content="Tomamos Un Mate, Alpaca, Mates, Baratos, Algarrobo, Virola Alpaca">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Mates - Tomamos Un Mate?</title>
