--- a/pages/termos.html
+++ b/pages/termos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sección de termos donde encontrarás termos de calidad premiun de la marca Stanley y Termolar de la tienda oficial de Tomamos Un Mate"">
+    <meta name="keywords" content="Tomamos Un Mate, Baratos, Termos, Termolar, Stanley, Mate System, Premiun, Original, Calidad">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Termos - Tomamos Un Mate?</title>
