--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tienda Online de Tomamos Un Mate donde conseguirás los mejores precios ">
+    <meta name="description" content="Tienda Online de Tomamos Un Mate donde conseguirás los mejores precios para comprar yerbas, mates, termos y alfajores.">
+    <meta name="keywords" content="Canarias, Tomamos Un Mate, Stanley, Mates, Baratos, Rasta, Baldo">
     <title>Home - Tomamos Un Mate?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
